--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   web_socket_channel: ^3.0.1
   multicast_dns: ^0.3.0
   path_provider: ^2.1.2
+  permission_handler: ^11.1.0
+  on_audio_query: ^2.9.0
+  audio_service: ^0.18.18
+  just_audio_background: ^0.0.1-beta.17
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -96,3 +100,10 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+dependency_overrides:
+  permission_handler: ^11.4.0
+  permission_handler_android: ^12.1.0
+  permission_handler_apple: ^9.4.7
+  permission_handler_platform_interface: ^4.3.0
+  permission_handler_windows: ^0.2.1
