--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
     <application
          android:label="jamsync"
          android:name="${applicationName}"
-         android:icon="@mipmap/ic_launcher">
+         android:icon="@mipmap/ic_launcher"
+         android:networkSecurityConfig="@xml/network_security_config">
         <service
             android:name="com.ryanheise.audioservice.AudioService"
             android:enabled="true"
