--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,15 @@ dependencies:
   audio_session: ^0.1.19
   uuid: ^4.5.1
   collection: ^1.18.0
-  web_socket_channel: ^3.0.1
   multicast_dns: ^0.3.0
   path_provider: ^2.1.2
   permission_handler: ^11.1.0
   on_audio_query_pluse: ^3.0.5
   audio_service: ^0.18.18
   just_audio_background: ^0.0.1-beta.17
+  shelf: ^1.4.2
+  web_socket_channel: ^3.0.1
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
